--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
