--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=3000
 SALTROUNDS = 2
 SECRETKEY= 'OQAUHWg0qa'
+
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=admin
+DB_NAME=userTasks
+DB_PORT=5432
+
