Added readme, added more validation, added fallback route

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3000
 SALTROUNDS = 2
 SECRETKEY= 'OQAUHWg0qa'
 
-DB_HOST=localhost
+DB_HOST=db
 DB_USER=postgres
 DB_PASSWORD=admin
 DB_NAME=userTasks
